[package]
name = "tgars"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/devprofile98/targa-rs.git"
authors = ["ahmad mansoori: https://github.com/devprofile98"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"]}